--- a/04-Analyse/Analyse.tex
+++ b/04-Analyse/Analyse.tex
@@ -252,6 +252,10 @@ Donc, d'un coté la carte centrale possède les infos sur le modèle, mais d'un 
 
 On peut donc imaginer utiliser des cartes centrales dans ce genre d'architecture pour résumer les trois autres. Ainsi, on pourra travailler sur l'info d'une seule des cartes au lieu de trois.
 
+\subsection{Carte contextuelle de rayon 0.2}
+Convergence ok, beau sinus de la carte M4 mais plus du tout de prédiction possible. Est ce que ca a un intérêt ? D'un coté, on a résumé les 3 cartes en une seule. 
+Cela semble confirmer en tout cas l'implication sous-indices => prédiction. Ici pas de prédiction possible et pas de sous indices. 
+ 
 \subsection{Et si on a la même architecture, avec une carte centrale, mais cette fois les cartes M1, M2, M3 sont également connectées ?}
 
 
