--- a/Notations.tex
+++ b/Notations.tex
@@ -8,7 +8,7 @@
 %---------------------------
 % (2) External inputs
 %---------------------------
-\newcommand\inpx{\xi}
+\newcommand\inpx{X}
 
 %---------------------------
 % (3) Contextual inputs
