--- a/main.tex
+++ b/main.tex
@@ -47,7 +47,7 @@
 %switch between draftmode and releasemode
 \ifdefined\draftmode
   \Drafttrue
-  \Reviewtrue
+  %\Reviewtrue
 \fi
 
 \ifdefined\reviewmode
@@ -72,6 +72,7 @@
 \input{02-SOM/SOM}
 \input{03-Representation/Representation}
 %\input{03-Algorithme/Algorithme}
+
 \draft{
 \input{04-Analyse/Analyse}
 }
